objects/cscfga__Product_Basket__c.object
<CustomObject>
    <description>Basket to supercede bundles...</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>cscfga__Opportunity__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_On_Basket_Snapshot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account On Basket Snapshot</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets (Account On Basket Snapshot)</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <defaultValue>&quot;No approval needed&quot;</defaultValue>
        <label>Approval Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quote_Language__c</fullName>
        <label>Quote Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                    <default>true</default>
                    <label>German</label>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCV_Approval_Flag__c</fullName>
        <formula>if(cscfga__total_contract_value__c &gt; 0, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TCV Approval Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UPC_Note_For_Approver__c</fullName>
        <description>The note presented to the approver on basket approval.</description>
        <inlineHelpText>The note presented to the approver on basket approval.</inlineHelpText>
        <label>Note For Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UPC_Quote_Generating_Status__c</fullName>
        <description>Used for monitoring quote generating.</description>
        <label>Quote Generating Status</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Used_Snapshot_Objects__c</fullName>
        <description>List of Objects which are used in output mapping of basket snapshot</description>
        <label>Used Snapshot Objects</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csbb__Accessibility_Status__c</fullName>
        <description>Status of accessibility of the basket. The basket gets blocked when it is in the process of cloning (whether it is cloned or the clone itself).</description>
        <inlineHelpText>Status of accessibility of the basket. The basket gets blocked when it is in the process of cloning (whether it is cloned or the clone itself).</inlineHelpText>
        <label>Accessibility Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csbb__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csbb__Includes_High_Level_Products__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Includes High Level Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csbb__Optionals__c</fullName>
        <description>Additional information on the Product Basket record, used by CSBB.</description>
        <inlineHelpText>Additional information on the Product Basket record, used by CSBB.</inlineHelpText>
        <label>Optionals</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>csbb__Synchronised_With_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronised With Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Basket_Status__c</fullName>
        <inlineHelpText>Displays status of the Basket.</inlineHelpText>
        <label>Basket Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Is Valid</fullName>
                </value>
                <value>
                    <fullName>Contains Errors</fullName>
                </value>
                <value>
                    <fullName>ContainsExpiredProducts</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of Opportunity this Basket is associated with.</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Products_Id_Qty_In_Basket__c</fullName>
        <inlineHelpText>List of product IDs contained in this Basket.</inlineHelpText>
        <label>Products Id Qty In Basket</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Products_In_Basket__c</fullName>
        <inlineHelpText>List of Product Names contained in the Basket.</inlineHelpText>
        <label>Products Names In Basket</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Shared_Context_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product Configuration that is used as a Shared Context which is associated with this Basket.</inlineHelpText>
        <label>Shared Context Configuration</label>
        <referenceTo>cscfga__Product_Configuration__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Total_Price__c</fullName>
        <inlineHelpText>Sum of non-recurring and one year&apos;s worth of recurring prices of all items contained in this Basket.</inlineHelpText>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__User_Session__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Details about user session within which this Bundle was created.</inlineHelpText>
        <label>User Session</label>
        <referenceTo>cscfga__User_Session__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__pricing_status__c</fullName>
        <inlineHelpText>Displays status of the Basket pricing</inlineHelpText>
        <label>Pricing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                </value>
                <value>
                    <fullName>Requires Update</fullName>
                    <default>true</default>
                    <label>Requires Update</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__total_contract_value__c</fullName>
        <label>Total Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csconta__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Frame_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Frame Agreement</label>
        <referenceTo>csconta__Frame_Agreement__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csdiscounts__Applied_Promotions__c</fullName>
        <label>Applied Promotions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>csdiscounts__Discount_Approval_Status__c</fullName>
        <label>Discount Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csdiscounts__annual_Contract_Value__c</fullName>
        <label>annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csdiscounts__recurring_Charge__c</fullName>
        <label>recurring Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csdiscounts__total_Discount_Over_Contract_Term__c</fullName>
        <label>total Discount Over Contract Term</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csdiscounts__total_Discount_in_the_First_Year__c</fullName>
        <label>total Discount in the First Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csdiscounts__total_one_off_charge__c</fullName>
        <label>total one off charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Basket_Stage__c</fullName>
        <description>In standalone basket scenario, use this picklist to trigger order generation</description>
        <inlineHelpText>In standalone basket scenario, use this picklist to trigger order generation</inlineHelpText>
        <label>Basket Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                    <default>true</default>
                    <label>Prospecting</label>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Change_Type__c</fullName>
        <label>Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Upgrade</fullName>
                </value>
                <value>
                    <fullName>Downgrade</fullName>
                </value>
                <value>
                    <fullName>Relocation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Generation_Batch_Job_Id__c</fullName>
        <label>Order Generation Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Order_Under_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order that initiated creation of this product basket</description>
        <inlineHelpText>Order that initiated creation of this product basket</inlineHelpText>
        <label>Order Under Change</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Previous_Product_Basket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Basket that preceded this one. Used for in-flight changes</description>
        <inlineHelpText>Product Basket that preceded this one. Used for in-flight changes</inlineHelpText>
        <label>Previous Product Basket</label>
        <referenceTo>cscfga__Product_Basket__c</referenceTo>
        <relationshipLabel>Following Product Baskets</relationshipLabel>
        <relationshipName>Following_Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_Inflight_in_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process Inflight in Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Process_Order_Generation_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the opportunity is set to be processed in batch mode</description>
        <inlineHelpText>Force batch processing of the opportunity</inlineHelpText>
        <label>Process Order Generation In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_Batch_Job_Id__c</fullName>
        <label>Product Configuration Clone Batch Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Product_Configuration_Clone_In_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the product configuration cloning is set to be processed in batch mode</description>
        <inlineHelpText>Force generation of MACD basket in a batch</inlineHelpText>
        <label>Product Configuration Clone In Batch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Added_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Added To</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Baskets (Subscription To Be Added To)</relationshipLabel>
        <relationshipName>Product_Baskets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Subscription_To_Be_Changed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Subscription To Be Changed</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Product Baskets</relationshipLabel>
        <relationshipName>Product_Baskets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Synchronised_with_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Synchronised with Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Basket</label>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__User_Session__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>cscfga__Total_Price__c</columns>
        <columns>cscfga__Opportunity__c</columns>
        <columns>cscfga__Basket_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Product Basket Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Baskets</pluralLabel>
    <recordTypes>
        <fullName>csordtelcoa__Inflight_Change</fullName>
        <active>true</active>
        <description>Inflight change basket</description>
        <label>Inflight Change</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>